--- a/modules/karpenter/node-pool.yaml
+++ b/modules/karpenter/node-pool.yaml
@@ -11,10 +11,10 @@ spec:
           values: ["amd64", "arm64"]
         - key: node.kubernetes.io/instance-type
           operator: In
-          values: ["t3.medium", "t3.large", "t4g.medium", "t4g.large"]
+          values: ["t3.medium", "t4g.medium"]
         - key: karpenter.sh/capacity-type
           operator: In
-          values: ["on-demand", "spot"]
+          values: ["spot"]
       nodeClassRef:
         group: karpenter.k8s.aws
         kind: EC2NodeClass
