--- a/modules/karpenter/node-pool.yaml
+++ b/modules/karpenter/node-pool.yaml
@@ -1,14 +1,16 @@
 apiVersion: karpenter.sh/v1
 kind: NodePool
 metadata:
-  name: default
+  name: default2-pool
 spec:
   template:
     spec:
       requirements:
+        # Match the architectures your NodeClass supports
         - key: kubernetes.io/arch
           operator: In
           values: ["amd64", "arm64"]
+        # You can constrain instance types if you want
         - key: node.kubernetes.io/instance-type
           operator: In
           values: ["t3.medium", "t4g.medium"]
@@ -18,7 +20,7 @@ spec:
       nodeClassRef:
         group: karpenter.k8s.aws
         kind: EC2NodeClass
-        name: default
+        name: default2
   disruption:
     consolidationPolicy: WhenEmptyOrUnderutilized
     consolidateAfter: 30s
